crates/talkbank-direct-parser/tests/snapshots/snapshot_tests__snapshot_word_compound_triple.snap
---
source: crates/talkbank-direct-parser/tests/snapshot_tests.rs
expression: "(word, errors.to_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 0,
                end: 16,
            },
            word_id: None,
            raw_text: "hello+world+test",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "hello",
                            ),
                        ),
                    ),
                    CompoundMarker(
                        WordCompoundMarker {
                            span: Some(
                                Span {
                                    start: 5,
                                    end: 6,
                                },
                            ),
                        },
                    ),
                    Text(
                        WordText(
                            NonEmptyString(
                                "world",
                            ),
                        ),
                    ),
                    CompoundMarker(
                        WordCompoundMarker {
                            span: Some(
                                Span {
                                    start: 11,
                                    end: 12,
                                },
                            ),
                        },
                    ),
                    Text(
                        WordText(
                            NonEmptyString(
                                "test",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
