crates/talkbank-direct-parser/tests/snapshots/snapshot_tests__snapshot_word_lengthening_single.snap
---
source: crates/talkbank-direct-parser/tests/snapshot_tests.rs
expression: "(word, errors.to_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 0,
                end: 6,
            },
            word_id: None,
            raw_text: "hello:",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "hello",
                            ),
                        ),
                    ),
                    Lengthening(
                        WordLengthening {
                            span: Some(
                                Span {
                                    start: 5,
                                    end: 6,
                                },
                            ),
                        },
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
