crates/talkbank-direct-parser/tests/snapshots/snapshot_tests__snapshot_word_overlap_internal.snap
---
source: crates/talkbank-direct-parser/tests/snapshot_tests.rs
expression: "(word, errors.to_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 0,
                end: 8,
            },
            word_id: None,
            raw_text: "hel⌈lo",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "hel",
                            ),
                        ),
                    ),
                    OverlapPoint(
                        OverlapPoint {
                            kind: TopOverlapBegin,
                            index: None,
                            span: Some(
                                Span {
                                    start: 3,
                                    end: 6,
                                },
                            ),
                        },
                    ),
                    Text(
                        WordText(
                            NonEmptyString(
                                "lo",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
