crates/talkbank-direct-parser/tests/snapshots/snapshot_tests__snapshot_word_shortening_apostrophe.snap
---
source: crates/talkbank-direct-parser/tests/snapshot_tests.rs
expression: "(word, errors.to_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 0,
                end: 5,
            },
            word_id: None,
            raw_text: "doin'",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "doin'",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
