crates/talkbank-direct-parser/tests/snapshots/snapshot_tests__snapshot_word_stress_primary.snap
---
source: crates/talkbank-direct-parser/tests/snapshot_tests.rs
expression: "(word, errors.to_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 0,
                end: 8,
            },
            word_id: None,
            raw_text: "ˈstress",
            content: WordContents(
                [
                    StressMarker(
                        WordStressMarker {
                            marker_type: Primary,
                            span: Some(
                                Span {
                                    start: 0,
                                    end: 2,
                                },
                            ),
                        },
                    ),
                    Text(
                        WordText(
                            NonEmptyString(
                                "stress",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
