crates/talkbank-direct-parser/tests/snapshots/snapshot_tests__snapshot_word_stress_secondary.snap
---
source: crates/talkbank-direct-parser/tests/snapshot_tests.rs
expression: "(word, errors.to_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 0,
                end: 11,
            },
            word_id: None,
            raw_text: "ˌsecondary",
            content: WordContents(
                [
                    StressMarker(
                        WordStressMarker {
                            marker_type: Secondary,
                            span: Some(
                                Span {
                                    start: 0,
                                    end: 2,
                                },
                            ),
                        },
                    ),
                    Text(
                        WordText(
                            NonEmptyString(
                                "secondary",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
